Upgrade PlantUML to plantuml-asl-1.2022.1 (#386)
* Upgrade PlantUML to plantuml-asl-1.2022.1

Signed-off-by: Sjoerd Talsma <sjoerd@talsma-ict.nl>

* Fix broken Javadoc link

Signed-off-by: Sjoerd Talsma <sjoerd@talsma-ict.nl>

* Fix build (copy missing resource files) and use LTS jdk versions

Signed-off-by: Sjoerd Talsma <sjoerd@talsma-ict.nl>