@@ -45,7 +45,7 @@ class SizeChange implements FontChange {
 		if (matcherSize.find() == false) {
 			throw new IllegalArgumentException();
 		}
-		size = new Integer(matcherSize.group(1));
+		size = Integer.valueOf(matcherSize.group(1));
 	}
 
 	Integer getSize() {
